--- a/files/Gemfile
+++ b/files/Gemfile
@@ -11,7 +11,8 @@ gem "jquery-rails"
 gem 'haml'      
 gem 'haml-rails'
 gem 'compass'    
-gem 'html5-boilerplate'
+gem 'html5-boilerplate'  
+gem 'barista'
 # gem 'devise'   
 # gem "oa-oauth", :require => "omniauth/oauth"
 
